# offline-xkcd

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/: script.js  style.css
templates/: comic.html.tera  index.html.tera  search.html.tera
