[package]
name = "xkcd"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]

[profile.release]
lto = true

[dependencies]
bit-vec = "*"
clap = "*"
error-chain = "*"
rand = "*"
regex = "*"
reqwest = "*"
rocket = "*"
rocket_codegen = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]
