[package]
name = "xkcd"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
description = """
Clone xkcd to browse and search offline
"""
repository = "https://github.com/Flakebi/offline-xkcd"
readme = "README.md"
keywords = ["xkcd", "offline"]
license = "MIT/Apache-2.0"

[profile.release]
lto = true

[dependencies]
bit-vec = "0.4"
structopt = "0.1"
structopt-derive = "0.1"
error-chain = "0.11"
rand = "0.3"
regex = "0.2"
reqwest = "0.8"
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["tera_templates"]
